--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vinay Tambey"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://img.icons8.com/3d-fluency/94/password.png" type="image/x-icon">
     <title>Password Generator App</title>
     <link rel="stylesheet" href="../dist/style.css">
 </head>
