Refractor styling for  element

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
 			<div class="flex-col-center gap-2">
 				<label for="p-length" class="text-2xl font-medium">Password Length <span id="password-length">8</span></label>
-				<input id="p-length" class="range-input" type="range" min="3" max="15" step="1"/>
+				<input id="p-length" class="range-input appearance-none cursor-grab mt-2 w-42 max-w-42 smooth-transition" type="range" min="3" max="15" step="1"/>
 			</div>
 
 			<div class="pass-options-grp">
