--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="h-screen bg-black flex-row-center">
-	<main class="bg-yellow-600 w-2xl max-w-2xl p-10 pb-0 flex-col-center gap-6 rounded-xl">
+	<main class="bg-yellow-600 w-2xl max-w-2xl p-10 pb-0 flex-col-center gap-6 rounded-xl relative overflow-hidden">
 		<h1 class="flex-row-center gap-4 text-4xl font-extrabold">
 			<svg class="w-7 max-w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 				<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
@@ -20,15 +20,17 @@
 			Password Generator
 		</h1>
 
-		<form class="min-w-full min-h-full flex-col-center gap-6 ">
-			<input id="password" class="pass-input" type="text" placeholder="lkhsdvoi09user0" disabled />
+		<form class="min-w-full h-full max-h-full flex-col-center gap-6 ">
+			<abbr title="Copy Password" class="w-full p-3">
+				<input id="password" class="pass-input" type="text" placeholder="Your Password will Display here..." disabled />
+			</abbr>
 
 			<div class="flex-col-center gap-2">
 				<label for="p-length" class="text-2xl font-medium">Password Length <span id="password-length">8</span></label>
-				<input id="p-length" class="range-input smooth-transition" type="range" min="3" max="15" step="1"/>
+				<input id="p-length" class="range-input" type="range" min="3" max="15" step="1"/>
 			</div>
 
-			<div class="pass-options-grp">
+			<div class="w-full flex-col-center gap-1 mt-2">
 				<div class="pass-options">
 					<label for="uppercase-radio"> Include Uppercase Alphabets </label>
 					<input id="uppercase-radio" type="checkbox" />
@@ -44,9 +46,9 @@
 					<input id="symbols-radio" type="checkbox" />
 				</div>
 			</div>
-
-			<button id="gen-pass-btn">Generate Password</button>
 		</form>
+
+		<button id="gen-pass-btn" class="w-full bg-yellow-400 p-4 cursor-pointer text-3xl absolute bottom-0 opacity-80 smooth-transition hover:hover-effects">Generate Password</button>
 	</main>
 
 	<script src="./app.js"></script>
