--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="h-screen bg-black flex-row-center">
-	<main class="bg-yellow-600 w-2xl max-w-2xl p-10 pb-0 flex-col-center gap-6 rounded-xl relative overflow-hidden">
+	<main class="w-2xl max-w-2xl p-10 pb-0 flex-col-center gap-6 rounded-xl relative overflow-hidden">
 		<h1 class="flex-row-center gap-4 text-4xl font-extrabold">
 			<svg class="w-7 max-w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 				<!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
@@ -48,7 +48,7 @@
 			</div>
 		</form>
 
-		<button id="gen-pass-btn" class="w-full bg-yellow-400 p-4 cursor-pointer text-3xl absolute bottom-0 opacity-80 smooth-transition hover:hover-effects">Generate Password</button>
+		<button id="gen-pass-btn" class="w-full bg-(--primary-light) p-4 cursor-pointer text-3xl absolute bottom-0 opacity-80 smooth-transition hover:hover-effects">Generate Password</button>
 	</main>
 
 	<script src="./app.js"></script>
