Refractor color of the 'generate-button'

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 			</div>
 		</form>
 
-		<button id="gen-pass-btn" class="w-full bg-(--primary-light) p-4 cursor-pointer text-3xl absolute bottom-0 opacity-80 smooth-transition hover:hover-effects">Generate Password</button>
+		<button id="gen-pass-btn" class="w-full bg-(--primary-color) p-4 cursor-pointer text-3xl absolute bottom-0 opacity-90 smooth-transition hover:hover-effects">Generate Password</button>
 	</main>
 
 	<script src="./app.js"></script>
