Change bg-color of <body>

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="/dist/style.css" />
 </head>
 
-<body class="h-screen bg-black flex-row-center">
+<body class="h-screen bg-zinc-900 flex-row-center">
 	<main class="w-2xl max-w-2xl p-10 pb-0 flex-col-center gap-6 rounded-xl relative overflow-hidden">
 		<h1 class="flex-row-center gap-4 text-4xl font-extrabold">
 			<svg class="w-7 max-w-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
