Add styling to' #password-length' element bto emphasize it

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 			</abbr>
 
 			<div class="flex-col-center gap-2">
-				<label for="p-length" class="text-2xl font-medium max-[470px]:text-[1.35rem]">Password Length <span id="password-length">8</span></label>
+				<label for="p-length" class="text-2xl font-medium max-[470px]:text-[1.35rem]">Password Length = <span id="password-length" class="text-(--color-primary-light) underline font-bold">8</span></label>
 				<input id="p-length" class="range-input" type="range" min="3" max="15" step="1"/>
 			</div>
 
