Made the password element read-only and hide the caret

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
 		<form class="min-w-full h-fit max-h-full flex-col-center gap-6 ">
 			<abbr title="Copy Password" class="w-full p-3">
-				<input id="password" class="pass-input" type="text" placeholder="Your Password will Display here..." />
+				<input id="password" class="pass-input" type="text" placeholder="Your Password will Display here..." readonly/>
 			</abbr>
 
 			<div class="flex-col-center gap-2">
